--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-parcelize'
+
+    id 'kotlin-android-extensions'
 }
+
 
 android {
     compileSdkVersion 30
@@ -60,6 +62,7 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'com.facebook.fresco:fresco:2.3.0'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
